@@ -285,9 +285,14 @@ Then, to boot from the first Ethernet interface, you would type:
 
 <informalexample><screen>
 
->>> boot ewa0
+>>> boot ewa0 -flags ""
 
 </screen></informalexample>
+
+</para><para>
+
+This will boot using the default kernel parameters as included in the
+netboot image.
 
 </para><para>
 
