@@ -33,8 +33,10 @@ debian-installer (20040806) UNRELEASED; urgency=medium
       to change debian-installer/kernel/linux/link_in_boot.
   * Kurt Roeckx
     - Use kernel version 2.6.8-1 on amd64.
+  * Steve Langasek
+    - install manual updates for the alpha architecture
 
- -- Bastian Blank <waldi@debian.org>  Mon, 16 Aug 2004 16:29:49 +0200
+ -- Steve Langasek <vorlon@debian.org>  Wed, 18 Aug 2004 21:47:12 -0700
 
 debian-installer (20040801) unstable; urgency=medium
 
